--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,6 +5,16 @@
 <ng-template #signupForm>
   <div class="row col-sm-6" style="max-width:350px;">
     <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+      <div>
+          <select  (change)="selectChangeHandler($event)">
+            <option value="user">user</option>
+            <option value="pm">pm</option>
+            <option value="admin">admin</option>
+         
+        </select>
+        
+      </div>
+   
       <div class="form-group">
         <label for="name">Your name</label>
         <input type="text" class="form-control" name="name" [(ngModel)]="form.name" #name="ngModel" required />
