--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,6 +21,9 @@
       <li *ngIf="authority === 'etudiant'" class="nav-item">
         <a class="nav-link" routerLink="requete">Requete</a>
       </li>
+      <li *ngIf="authority === 'etudiant'" class="nav-item">
+        <a class="nav-link" routerLink="list-requete">List Requete</a>
+      </li>
 
           <!-- ----------------------------------------------------------------------------->
       <li *ngIf="authority === 'parent'" class="nav-item">
