--- a/src/app/Dashboard/GestionRequete/requete/requete.component.html
+++ b/src/app/Dashboard/GestionRequete/requete/requete.component.html
@@ -6,8 +6,28 @@
       <strong>Token:</strong> {{info.token}}.
     </p>
     <button class="btn btn-secondary" (click)="logout()">Logout</button>
-
-
+    <!--- list -->
+    <div class="container">
+      <div class="panel panel-primary">
+          <div class="panel-heading">List requete</div>
+          <div class="panel-body">
+            <button class="btn btn-primary " (click)="onGetRequetes()">Requetes</button>
+          </div>
+          <div class="panel-body">
+              <table *ngIf="listeRequete" class="table table-striped">
+                <tr><th>Id</th><th>Titre</th><th>Description</th><th>Date</th><th>Email</th></tr>
+                <tr *ngFor="let req of listeRequete">
+                    <td>{{req.id}}</td>
+                    <td>{{req.titre}}</td>
+                    <td>{{req.description}}</td>
+                    <td>{{req.date}}</td>
+                    <td>{{req.user}}</td>
+                </tr>
+              </table>
+          </div>
+      </div>
+    </div>
+ <!---end  list -->
     <div class="row col-sm-6" style="max-width:350px;">
         <form name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
               
@@ -59,7 +79,12 @@
               Signup failed!<br/>{{errorMessage}}
             </div>
           </div>
-        </form>  
+        </form> 
+        
+        
+
+
+        
   </div>
   
   <ng-template #loggedOut>
